packages/typ/tests/fixtures/diagnostics/0287_fun_explicit_poly_returns_bool_05.ml
let bad_epsilon : 'a. 'a -> 'a = fun _ -> true
